<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">gonalves-notes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="count">Count!</string>
    <string name="reset">Reset</string>
    <string name="statistics">Statistics</string>
    <string name="back">Back</string>
    <string name="value">0</string>
    <string name="rename">Rename</string>
    <string name="addCounter">Add Counter</string>
    <string name="enterName">Enter a name for your Counter</string>
    <string name="confirmName">Confirm</string>
    <string name="browse">Browse Counters</string>
    <string name="delete">Delete this Counter</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>

</resources>
